Repaired fluid screenshot highlights and logos (#41)
Our landing page had some fluidity/responsive issues. This PR repairs those. In this PR:

- Added patch for keeping screenshot highlights fluid yet attached to screenshot
- Added patch for logos which were too big on large screen and not staying on separate lines for small screen

The visual changes are insignificant so there will be no screenshots provided.

--- a/public/css/generic/_mixins.scss
+++ b/public/css/generic/_mixins.scss
@@ -7,20 +7,24 @@ $medium-end: $large-start - 1;
     @media (max-width: $small-end) { @content; }
   }
 
-  @if $media-query == medium {
+  @elseif $media-query == medium {
     @media (min-width: $medium-start) and (max-width: $medium-end) { @content; }
   }
 
-  @if $media-query == medium-and-up {
+  @elseif $media-query == medium-and-up {
     @media (min-width: $medium-start) { @content; }
   }
 
-  @if $media-query == medium-and-down {
+  @elseif $media-query == medium-and-down {
     @media (max-width: $medium-end) { @content; }
   }
 
-  @if $media-query == large {
+  @elseif $media-query == large {
     @media (min-width: $large-start) { @content; }
+  }
+
+  @else {
+    @error "media-query \"#{$media-query}\" wasn't recognized. Please use `small`, `medium`, `large`, `medium-and-down`, or `medium-and-up`";
   }
 }
 
